src/objects/SalesForecast__c.object
<CustomObject>
    <fields>
        <fullName>Actual_Closed_Revenue__c</fullName>
        <label>Actual Closed Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Commit_Revenue__c</fullName>
        <label>Actual Commit Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Closed_Revenue__c</fullName>
        <label>Expected Closed Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Expected_Commit_Revenue__c</fullName>
        <label>Expected Commit Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProjectName__c</fullName>
        <label>ProjectName</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>QuarterForecasts</relationshipLabel>
        <relationshipName>SalesForecasts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>QuarterName__c</fullName>
        <label>Quarter</label>
        <referenceTo>Quarter__c</referenceTo>
        <relationshipLabel>ProjectForecasts</relationshipLabel>
        <relationshipName>SalesForecasts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Status_Closed_Revenue__c</fullName>
        <formula>IF( Expected_Closed_Revenue__c &gt; Actual_Closed_Revenue__c ,IMAGE(&quot;servlet/servlet.FileDownload?file=01590000008b77V&quot;,&quot;Red&quot;),
    IF (Expected_Closed_Revenue__c &lt; Actual_Closed_Revenue__c ,               IMAGE(&quot;/servlet/servlet.FileDownload?file=01590000008b77P&quot;, &quot;Green&quot;),
IMAGE(&quot;/servlet/servlet.FileDownload?file=01590000008b77K&quot;, &quot;Blue&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Closed Revenue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Commit_Revenue__c</fullName>
        <formula>IF( Expected_Commit_Revenue__c &gt; Actual_Commit_Revenue__c ,IMAGE(&quot;servlet/servlet.FileDownload?file=01590000008b77V&quot;,&quot;Red&quot;),
    IF (Expected_Commit_Revenue__c &lt; Actual_Commit_Revenue__c ,               IMAGE(&quot;/servlet/servlet.FileDownload?file=01590000008b77P&quot;, &quot;Green&quot;),
IMAGE(&quot;/servlet/servlet.FileDownload?file=01590000008b77K&quot;, &quot;Blue&quot;)))</formula>
        <label>Status Commit Revenue</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unit_Negotiation__c</fullName>
        <label>Unit @ Negotiation</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Unit_Sold__c</fullName>
        <label>Unit Sold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>SalesForecast</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>QuarterName__c</columns>
        <columns>ProjectName__c</columns>
        <columns>Expected_Closed_Revenue__c</columns>
        <columns>Expected_Commit_Revenue__c</columns>
        <columns>Actual_Closed_Revenue__c</columns>
        <columns>Actual_Commit_Revenue__c</columns>
        <columns>Unit_Negotiation__c</columns>
        <columns>Unit_Sold__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>SalesForecast Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SalesForecasts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>